-------------------------------------------------------------------
Sat Mar 26 15:23:20 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- move out the creating of symlinks from the spec file into the
  switchable scripts

-------------------------------------------------------------------
Sat Mar 26 00:34:18 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- add 2 switchable scripts for PowerXpress:
  - switchlibGL
  - switchlibglx
- update spec file

-------------------------------------------------------------------
Tue Mar 08 09:12:40 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- add a rotated line while rpmbuild is running

-------------------------------------------------------------------
Sun Feb 27 23:54:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- remove patch file for Kernel 2.6.38 because is no longer required for 8.84

-------------------------------------------------------------------
Sun Feb 20 05:31:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- change /etc/modprobe.d/fglrx.conf to /etc/modprobe.d/50-fglrx.conf

-------------------------------------------------------------------
Sun Feb 20 04:41:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- fix to set the local language to LANG=C and LC_ALL=C
- add a patch file for Kernel 2.6.38

-------------------------------------------------------------------
Sat Feb 19 09:07:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- add KERNEL_DEVEL variable to overwrite or deactivate the requirements
  of kernel development packages
  Usage:
  # KERNEL_DEVEL="kernel-source kernel-devel kernel-desktop-devel" ...
  or deactivate it (only use for a vanilla kernel):
  # KERNEL_DEVEL="no" ...
- add support for vanilla kernel in fglrx-kernel-build.sh
- add USE_VANILLA_KERNELS (yes|no*) variable in the fglrxconfig to
  activate the build of an fglrx kernel module for the vanilla kernel
- add FGLRX_BUILD_LOG_APPEND (yes*|no) variable in the fglrxconfig and